FLY wire David/force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/AQS_Constraining_Product__c.field-meta.xml
<CustomField>
    <fullName>AQS_Constraining_Product__c</fullName>
    <description>Instead of just showing the Constraining Product Option, this field indicates the Product&apos;s Name</description>
    <formula>SBQQ__ConstrainingOption__r.SBQQ__ProductName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Instead of just showing the Constraining Product Option, this field indicates the Product&apos;s Name</inlineHelpText>
    <label>Constraining Product</label>
    <type>Text</type>
</CustomField>