FLY wire David/force-app/main/default/objects/SBQQ__OptionConstraint__c/fields/CPQExternalID__c.field-meta.xml
<CustomField>
    <fullName>CPQExternalID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>External ID for migration purposes</inlineHelpText>
    <label>CPQExternalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>